--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,9 @@ body {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid;
+  position: sticky;
+  top: 0;
+  background-color: rgb(245, 245, 245);
 }
 .headerLogo {
   display: flex;
@@ -169,13 +172,13 @@ input {
   top: 0;
   left: 0;
   background-color: rgba(29, 29, 29, 0.6);
-  z-index: 5;
+  z-index: 50;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
 }
 
 .shadow_active {
-  z-index: 8;
+  z-index: 80;
 }
 
 .body_hidden {
@@ -200,7 +203,7 @@ input {
     background-color: rgba(41, 41, 41, 0.95);
     top: 0;
     right: 0;
-    z-index: 10;
+    z-index: 100;
     transform: translateX(100%);
     display: flex;
     flex-direction: column;
@@ -230,3 +233,4 @@ input {
     color: #eaeaea;
   }
 }
+
